# dsp-hw1

./: .gitignore  CMakeLists.txt  README.md  main.cpp  perf.sh  plot.py  pyproject.toml  run.sh
paralelo/: mergesort_paralelo.cpp  mergesort_paralelo.h
results/data/: measurements.csv
secuencial/: mergesort.cpp  mergesort.h
src/: main.cpp  util.hpp
src/parallel/: k_way_mergesort.cpp  k_way_mergesort.hpp  mergesort.cpp  mergesort.hpp  parallel_merge.cpp  parallel_mergesort_ranks.cpp  ranks_k_way_mergesort.cpp  ranks_k_way_mergesort.hpp  ranks_mergesort.cpp  ranks_mergesort.hpp
src/parallel/merge/: k_merge.cpp  k_merge.hpp  merge.cpp  ranks.cpp  ranks.hpp  ranks_k_way.cpp  ranks_k_way.hpp
src/parallel_merge_sort/: k_way_mergesort.cpp  k_way_mergesort.hpp  k_way_mergesort_ranks.cpp  k_way_mergesort_ranks.hpp  mergesort.cpp  parallel_mergesort_ranks.cpp  parallel_mergesort_ranks.hpp
src/paralllel_merge/: parallel_k_merge.cpp  parallel_k_merge.hpp  parallel_merge.cpp  parallel_merge.hpp
src/sequential/: k_way_mergesort.cpp  k_way_mergesort.hpp  mergesort.cpp  mergesort.hpp
src/sequential_merge_sort/: k_way_mergesort.cpp  mergesort.cpp
